--- a/docs/components/preview/preview.html
+++ b/docs/components/preview/preview.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link media="all" rel="stylesheet" href="/css/atomic-package/atomic-package.css">
-    <title>Default | Preview Layout</title>
+    <title> | Preview Layout</title>
     <style>
       #main { padding-top: 2em; }
     </style>
@@ -17,15 +17,6 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
-<p class="input"><input type="text" value="テキスト"></p>
-<p class="input"><input type="checkbox"></p>
-
-<p class="text">search</p>
-<p class="input"><input type="search"></p>
-
-<p class="input"><input type="radio"></p>
-<p class="input"><input type="radio" checked></p>
-<p class="input"><input type="radio" disabled checked></p>
 
         </div>
       </div>
