--- a/docs/components/preview/headings.html
+++ b/docs/components/preview/headings.html
@@ -1,5 +1,22 @@
 
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <link media="all" rel="stylesheet" href="/css/atomic-package/atomic-package.css">
+    <title>Default | Preview Layout</title>
+    <style>
+      #main { padding-top: 2em; }
+    </style>
+</head>
+<body>
+<div id="main">
+<article class="cbody">
+  <section class="main-content" itemprop="articleBody">
+    <div class="content">
+      <div class="row">
+        <div class="grid grid-8 grid-center">
 <h1 class="title">h1 Title</h1>
 <h2 class="title">h2 Title</h2>
 <h3 class="title">h3 Title</h3>
@@ -55,3 +72,11 @@
 
 <h4 class="title">タイトル 下線ボーダー</h4>
 
+        </div>
+      </div>
+    </div>
+  </section>
+</article>
+</div>
+</body>
+</html>
