--- a/docs/components/preview/radio.html
+++ b/docs/components/preview/radio.html
@@ -1,5 +1,22 @@
 
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <link media="all" rel="stylesheet" href="/css/atomic-package/atomic-package.css">
+    <title>Default | Preview Layout</title>
+    <style>
+      #main { padding-top: 2em; }
+    </style>
+</head>
+<body>
+<div id="main">
+<article class="cbody">
+  <section class="main-content" itemprop="articleBody">
+    <div class="content">
+      <div class="row">
+        <div class="grid grid-8 grid-center">
 <h3 class="title">ラジオボタン</h3>
 
 <input type="radio">
@@ -54,3 +71,11 @@
 <input type="radio" name="radio-size" class="primary large">
 <input type="radio" name="radio-size" class="primary big">
 
+        </div>
+      </div>
+    </div>
+  </section>
+</article>
+</div>
+</body>
+</html>
