--- a/docs/components/preview/alert.html
+++ b/docs/components/preview/alert.html
@@ -4,8 +4,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link media="all" rel="stylesheet" href="/css/atomic-package/atomic-package.css">
-    <link media="all" rel="stylesheet" href="/css/css/atomic-package/atomic-package.css">
+    <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
+    <!--<link media="all" rel="stylesheet" href="/css/css/atomic-package/atomic-package.css">-->
     <title>Default | Preview Layout</title>
     <style>
       #main { padding-top: 2em; }
@@ -19,6 +19,8 @@
       <div class="row">
         <div class="grid grid-8 grid-center">
 ## Alert
+
+/css/css/atomic-package/atomic-package.css
 
 <p class="alert">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
 <p class="alert green">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
