--- a/docs/components/preview/thumbnail.html
+++ b/docs/components/preview/thumbnail.html
@@ -4,8 +4,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link media="all" rel="stylesheet" href="/css/atomic-package/atomic-package.css">
-    <link media="all" rel="stylesheet" href="/css/css/atomic-package/atomic-package.css">
+    <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
+    <!--<link media="all" rel="stylesheet" href="/css/css/atomic-package/atomic-package.css">-->
     <title>Default | Preview Layout</title>
     <style>
       #main { padding-top: 2em; }
