--- a/docs/components/render/alert.html
+++ b/docs/components/render/alert.html
@@ -2,6 +2,8 @@
 
 ## Alert
 
+/css/css/atomic-package/atomic-package.css
+
 <p class="alert">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
 <p class="alert green">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
 <p class="alert orange">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
