--- a/src/components/_preview.hbs
+++ b/src/components/_preview.hbs
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link media="all" rel="stylesheet" href="/css/atomic-package/atomic-package.css">
-    <link media="all" rel="stylesheet" href="/css/css/atomic-package/atomic-package.css">
+    <link media="all" rel="stylesheet" href="{{ path '/css/atomic-package/atomic-package.css'}}">
+    <!--<link media="all" rel="stylesheet" href="/css/css/atomic-package/atomic-package.css">-->
     <title>{{ _target.label }} | Preview Layout</title>
     <style>
       #main { padding-top: 2em; }
