--- a/src/components/alert.hbs
+++ b/src/components/alert.hbs
@@ -1,5 +1,7 @@
 ## Alert
 
+{{css-assets-path}}
+
 <p class="alert">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
 <p class="alert green">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
 <p class="alert orange">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
