refactor css path

--- a/docs/components/detail/thumbnail.html
+++ b/docs/components/detail/thumbnail.html
@@ -488,9 +488,7 @@
     <code class="Code Code--lang-json">
         
             
-            <pre>{
-  <span class="hljs-attr">"css-assets-path"</span>: <span class="hljs-string">"/css/css/atomic-package/atomic-package.css"</span>
-}</pre>
+            <pre><span class="hljs-comment">/* No context defined for this component. */</span></pre>
             
         
     </code>
