--- a/docs/components/detail/alert.html
+++ b/docs/components/detail/alert.html
@@ -153,7 +153,7 @@
 <div class="Browser-panel Browser-code is-active" data-role="tab-panel" id="browser-80972912b2487b1cca19ed067ca076b7-panel-html">
     <code class="Code Code--lang-html">
         
-        <pre>## Alert /css/css/atomic-package/atomic-package.css
+        <pre>## Alert
 
 <span class="hljs-tag">&lt;<span class="hljs-name">p</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"alert"</span>&gt;</span>アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言<span class="hljs-tag">&lt;/<span class="hljs-name">p</span>&gt;</span>
 <span class="hljs-tag">&lt;<span class="hljs-name">p</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"alert green"</span>&gt;</span>アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言<span class="hljs-tag">&lt;/<span class="hljs-name">p</span>&gt;</span>
@@ -272,9 +272,7 @@
     <code class="Code Code--lang-json">
         
             
-            <pre>{
-  <span class="hljs-attr">"css-assets-path"</span>: <span class="hljs-string">"/css/css/atomic-package/atomic-package.css"</span>
-}</pre>
+            <pre><span class="hljs-comment">/* No context defined for this component. */</span></pre>
             
         
     </code>
