refactor input elements

--- a/docs/components/preview/input--wrap-element.html
+++ b/docs/components/preview/input--wrap-element.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
-    <title>Default | Preview Layout</title>
+    <title>Wrap Element | Preview Layout</title>
     <style>
       #main { padding-top: 2em; }
     </style>
@@ -18,13 +18,16 @@
       <div class="row">
         <div class="grid grid-8 grid-center">
 default
-<p><input type="text" value="default input"><input type="text" value="default input" disabled=""></p>
+<p class="input"><input type="text" value="default input"></p>
+<p class="input disabled"><input type="text" value="default input"></p>
 
 password
-<p><input type="password" value="input type password"><input type="password" value="input type password" disabled=""></p>
+<p class="input password"><input type="text" value="input type password"></p>
+<p class="input password disabled"><input type="text" value="input type password"></p>
 
 search
-<p><input type="search" value="input type search"><input type="search" value="input type search" disabled=""></p>
+<p class="input search"><input type="text" value="input type search"></p>
+<p class="input search disabled"><input type="text" value="input type search"></p>
 
         </div>
       </div>
