--- a/docs/components/preview/input--set.html
+++ b/docs/components/preview/input--set.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
-    <title>Default | Preview Layout</title>
+    <title>Set | Preview Layout</title>
     <style>
       #main { padding-top: 2em; }
     </style>
@@ -17,14 +17,15 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
-default
-<p><input type="text" value="default input"><input type="text" value="default input" disabled=""></p>
+<p class="input"><input type="text" value="テキスト"></p>
+<p class="input"><input type="checkbox"></p>
 
-password
-<p><input type="password" value="input type password"><input type="password" value="input type password" disabled=""></p>
+<p class="text">search</p>
+<p class="input"><input type="search"></p>
 
-search
-<p><input type="search" value="input type search"><input type="search" value="input type search" disabled=""></p>
+<p class="input"><input type="radio"></p>
+<p class="input"><input type="radio" checked></p>
+<p class="input"><input type="radio" disabled checked></p>
 
         </div>
       </div>
