--- a/docs/components/preview/input--default.html
+++ b/docs/components/preview/input--default.html
@@ -7,7 +7,7 @@
     <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
     <title>Default | Preview Layout</title>
     <style>
-      #main { padding-top: 2em; }
+      #main { padding: 2em; }
     </style>
 </head>
 <body>
@@ -17,13 +17,13 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
-default
+<p>default</p>
 <p><input type="text" value="default input"><input type="text" value="default input" disabled=""></p>
 
-password
+<p>password</p>
 <p><input type="password" value="input type password"><input type="password" value="input type password" disabled=""></p>
 
-search
+<p>search</p>
 <p><input type="search" value="input type search"><input type="search" value="input type search" disabled=""></p>
 
         </div>
