--- a/docs/components/preview/input--size-variation-height.html
+++ b/docs/components/preview/input--size-variation-height.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
-    <title>Default | Preview Layout</title>
+    <title>Size Variation Height | Preview Layout</title>
     <style>
       #main { padding: 2em; }
     </style>
@@ -17,6 +17,20 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
+<p>lower</p>
+<p class="input lower"><input type="text" value="テキスト"></p>
+
+<p>low</p>
+<p class="input low"><input type="text" value="テキスト"></p>
+
+<p>default</p>
+<p class="input"><input type="text" value="テキスト"></p>
+
+<p>high</p>
+<p class="input high"><input type="text" value="テキスト"></p>
+
+<p>lofty</p>
+<p class="input lofty"><input type="text" value="テキスト"></p>
 
         </div>
       </div>
