--- a/docs/components/preview/input--size-variation-width-height.html
+++ b/docs/components/preview/input--size-variation-width-height.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
-    <title>Set | Preview Layout</title>
+    <title>Size Variation Width Height | Preview Layout</title>
     <style>
       #main { padding: 2em; }
     </style>
@@ -17,15 +17,23 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
+<p>mini</p>
+<p class="input mini"><input type="text" value="テキスト"></p>
+
+<p>small</p>
+<p class="input small"><input type="text" value="テキスト"></p>
+
+<p>default</p>
 <p class="input"><input type="text" value="テキスト"></p>
-<p class="input"><input type="checkbox"></p>
 
-<p class="text">search</p>
-<p class="input"><input type="search"></p>
+<p>large</p>
+<p class="input large"><input type="text" value="テキスト"></p>
 
-<p class="input"><input type="radio"></p>
-<p class="input"><input type="radio" checked></p>
-<p class="input"><input type="radio" disabled checked></p>
+<p>big</p>
+<p class="input big"><input type="text" value="テキスト"></p>
+
+<p>free</p>
+<p class="input free"><input type="text" value="テキスト"></p>
 
         </div>
       </div>
