--- a/docs/components/preview/input--size-variation-width.html
+++ b/docs/components/preview/input--size-variation-width.html
@@ -17,13 +17,23 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
-<p class="btn primary narrow"><a href="#">narrow</a></p>
-<p class="btn primary short"><a href="#">short</a></p>
-<p class="btn primary"><a href="#">Default button</a></p>
-<p class="btn primary long"><a href="#">long</a></p>
-<p class="btn primary wide"><a href="#">wide</a></p>
+<p>narrow</p>
+<p class="input narrow"><input type="text" value="12:00"></p>
 
-<p class="btn primary free"><a href="#">free</a></p>
+<p>short</p>
+<p class="input short"><input type="text" value="short text"></p>
+
+<p>default</p>
+<p class="input"><input type="text" value="default text value"></p>
+
+<p>long</p>
+<p class="input long"><input type="text" value="long size input"></p>
+
+<p>wide</p>
+<p class="input wide"><input type="text" value="wide size input"></p>
+
+<p>free</p>
+<p class="input free"><input type="text" value="free size input"></p>
 
         </div>
       </div>
