--- a/docs/components/preview/input--wrap-element.html
+++ b/docs/components/preview/input--wrap-element.html
@@ -7,7 +7,7 @@
     <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
     <title>Wrap Element | Preview Layout</title>
     <style>
-      #main { padding-top: 2em; }
+      #main { padding: 2em; }
     </style>
 </head>
 <body>
@@ -17,15 +17,15 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
-default
+<p>default</p>
 <p class="input"><input type="text" value="default input"></p>
 <p class="input disabled"><input type="text" value="default input"></p>
 
-password
+<p>password</p>
 <p class="input password"><input type="text" value="input type password"></p>
 <p class="input password disabled"><input type="text" value="input type password"></p>
 
-search
+<p>search</p>
 <p class="input search"><input type="text" value="input type search"></p>
 <p class="input search disabled"><input type="text" value="input type search"></p>
 
