--- a/docs/components/render/input--default.html
+++ b/docs/components/render/input--default.html
@@ -1,11 +1,11 @@
 
 
-default
+<p>default</p>
 <p><input type="text" value="default input"><input type="text" value="default input" disabled=""></p>
 
-password
+<p>password</p>
 <p><input type="password" value="input type password"><input type="password" value="input type password" disabled=""></p>
 
-search
+<p>search</p>
 <p><input type="search" value="input type search"><input type="search" value="input type search" disabled=""></p>
 
