--- a/src/components/form/input/input--wrap-element.hbs
+++ b/src/components/form/input/input--wrap-element.hbs
@@ -1,11 +1,11 @@
-default
+<p>default</p>
 <p class="input"><input type="text" value="default input"></p>
 <p class="input disabled"><input type="text" value="default input"></p>
 
-password
+<p>password</p>
 <p class="input password"><input type="text" value="input type password"></p>
 <p class="input password disabled"><input type="text" value="input type password"></p>
 
-search
+<p>search</p>
 <p class="input search"><input type="text" value="input type search"></p>
 <p class="input search disabled"><input type="text" value="input type search"></p>
