--- a/docs/components/detail/input--set.html
+++ b/docs/components/detail/input--set.html
@@ -207,7 +207,7 @@
         
         
         <li class="Meta-item">
-            <strong class="Meta-key">Variants <em class="Meta-count">(3)</em>:</strong>
+            <strong class="Meta-key">Variants <em class="Meta-count">(6)</em>:</strong>
             <span class="Meta-value Meta-value--linkList">
             
                 <a href="input--default.html">
@@ -216,6 +216,18 @@
             
                 <a href="">
                     <span>Set</span>
+                </a>, 
+            
+                <a href="input--size-variation-height.html">
+                    <span>Size Variation Height</span>
+                </a>, 
+            
+                <a href="input--size-variation-width.html">
+                    <span>Size Variation Width</span>
+                </a>, 
+            
+                <a href="input--size-variation-width-height.html">
+                    <span>Size Variation Width Height</span>
                 </a>, 
             
                 <a href="input--wrap-element.html">
@@ -635,6 +647,78 @@
         <li class="Tree-item Tree-entity is-current" data-state="current" data-role="item">
             <a class="Tree-entityLink" href="" data-pjax>
                 <span>Set</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a class="Tree-entityLink" href="input--size-variation-height.html" data-pjax>
+                <span>Size Variation Height</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a class="Tree-entityLink" href="input--size-variation-width.html" data-pjax>
+                <span>Size Variation Width</span>
+                
+
+<div class="Status Status--unlabelled">
+
+<div class="Status-dots">
+
+
+<span class="Status-dot" style="border-color: #29CC29;" title="Ready"></span>
+
+
+</div>
+
+</div>
+
+
+            </a>
+        </li>
+        
+    
+        
+        
+        <li class="Tree-item Tree-entity" data-role="item">
+            <a class="Tree-entityLink" href="input--size-variation-width-height.html" data-pjax>
+                <span>Size Variation Width Height</span>
                 
 
 <div class="Status Status--unlabelled">
