--- a/docs/components/preview/list--text.html
+++ b/docs/components/preview/list--text.html
@@ -7,7 +7,7 @@
     <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
     <title>Text | Preview Layout</title>
     <style>
-      #main { padding-top: 2em; }
+      #main { padding: 2em; }
     </style>
 </head>
 <body>
