--- a/src/components/_preview.hbs
+++ b/src/components/_preview.hbs
@@ -5,7 +5,7 @@
     <link media="all" rel="stylesheet" href="{{ path '/css/atomic-package/atomic-package.css'}}">
     <title>{{ _target.label }} | Preview Layout</title>
     <style>
-      #main { padding-top: 2em; }
+      #main { padding: 2em; }
     </style>
 </head>
 <body>
