build docs files

--- a/docs/components/preview/checkbox--set.html
+++ b/docs/components/preview/checkbox--set.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
-    <title>Default | Preview Layout</title>
+    <title>Set | Preview Layout</title>
     <style>
       #main { padding: 2em; }
     </style>
@@ -17,9 +17,16 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
-<input type="checkbox">
-<input type="checkbox" checked>
-<input type="checkbox" disabled checked>
+<p class="input mini"><input type="checkbox"></p>
+<p class="input small"><input type="checkbox"></p>
+<p class="input"><input type="checkbox"></p>
+<p class="input large"><input type="checkbox"></p>
+<p class="input big"><input type="checkbox"></p>
+
+<input type="text" value="テキスト"/>
+<input type="checkbox"/>
+<input type="search"/>
+<input type="radio"/>
 
         </div>
       </div>
