--- a/docs/components/preview/checkbox--size-variation.html
+++ b/docs/components/preview/checkbox--size-variation.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link media="all" rel="stylesheet" href="../../css/atomic-package/atomic-package.css">
-    <title>Default | Preview Layout</title>
+    <title>Size Variation | Preview Layout</title>
     <style>
       #main { padding: 2em; }
     </style>
@@ -17,9 +17,11 @@
     <div class="content">
       <div class="row">
         <div class="grid grid-8 grid-center">
+<input class="mini" type="checkbox">
+<input class="small" type="checkbox">
 <input type="checkbox">
-<input type="checkbox" checked>
-<input type="checkbox" disabled checked>
+<input class="large" type="checkbox">
+<input class="big" type="checkbox">
 
         </div>
       </div>
