--- a/docs/components/preview/radio--color-variation.html
+++ b/docs/components/preview/radio--color-variation.html
@@ -1,29 +1,36 @@
-<h3 class="title">ラジオボタン</h3>
-
-<input type="radio">
-<input type="radio" checked>
-<input type="radio" disabled checked>
 
 
-<br>
-<br>
-
-### Radio Color Variation
-
-<br>
-<br>
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <link media="all" rel="stylesheet" href="../../atomic-package/atomic-package.css">
+    <title>Color Variation | Preview Layout</title>
+    <style>
+      #main { padding: 2em; }
+    </style>
+</head>
+<body>
+<div id="main">
+<article class="cbody">
+  <section class="main-content" itemprop="articleBody">
+    <div class="content">
+      <div class="row">
+        <div class="grid grid-8 grid-center">
 <input type="radio" name="radio1">
 <input type="radio" name="radio1" checked>
 <input type="radio" disabled checked>
+
 
 <input type="radio" class="primary" name="radio2">
 <input type="radio" class="primary" name="radio2" checked>
 <input type="radio" class="primary" disabled checked>
 
+
 <input type="radio" class="blue" name="radio3">
 <input type="radio" class="blue" name="radio3" checked>
 <input type="radio" class="blue" disabled checked>
+
 
 <input type="radio" class="green" name="radio4">
 <input type="radio" class="green" name="radio4" checked>
@@ -37,17 +44,11 @@
 <input type="radio" class="red" name="radio6" checked>
 <input type="radio" class="red" disabled checked>
 
-<br>
-<br>
-
-
-### Radio Size Variation
-
-<br>
-<br>
-
-<input type="radio" name="radio-size" class="primary mini">
-<input type="radio" name="radio-size" class="primary small">
-<input type="radio" name="radio-size" class="primary" checked>
-<input type="radio" name="radio-size" class="primary large">
-<input type="radio" name="radio-size" class="primary big">
+        </div>
+      </div>
+    </div>
+  </section>
+</article>
+</div>
+</body>
+</html>
